<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:vmSafeMode="true"
    tools:context="music.onestream.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:layout_weight="1" />

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_weight="1" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:tabMode="scrollable"
            app:tabPaddingStart="30dp"
            app:tabPaddingEnd="30dp"/>

    </android.support.design.widget.AppBarLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="115dp">

        <ListView
            android:cacheColorHint="@android:color/transparent"
            android:background="@drawable/listbackground"
            android:listSelector="#E0ECF8"
            android:id="@+id/ListView1"
            android:choiceMode="singleChoice"
            android:layout_width="match_parent"
            android:layout_height="380dp">
        </ListView>

        <Button
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:text="Login to Service"
            android:id="@+id/loginLauncherLinkerButton">
        </Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_gravity="bottom"
        android:layout_weight="100">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="100">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Prev"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/black"
            android:layout_gravity="bottom|start"
            app:srcCompat="@android:drawable/ic_media_previous"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Rewind"
            app:backgroundTint="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@android:drawable/ic_media_rew"
            android:layout_marginBottom="16dp"
            android:clickable="true" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabIO"
            android:height="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:backgroundTint="@android:color/black"
            android:src="@android:drawable/ic_media_play"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            app:backgroundTint="@android:color/black"
            app:srcCompat="@android:drawable/ic_media_next"
            android:layout_marginBottom="16dp"
            android:clickable="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Random"
            app:backgroundTint="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/shuffle"
            android:clickable="true"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
