...
    <Button
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_height="120dp"
        android:layout_width="120dp"
        android:text="Create Playlist"
        android:drawableTop="@drawable/playlist"
        android:id="@+id/playlistPage"
        android:textColor="@color/default_color"
        android:backgroundTint="@color/colorPrimary"/>

        <ToggleButton
            android:layout_columnWeight="1"
            android:layout_column="2"
...
